examples/ShouldFail/ParseErrors/BrokenLex1.java
class BrokenLex1{
	public static void main (String[] a) {
	  y$1 = 9;
	  System.out.println(y);
    }
}
